openshift-demo-project-01/deployment_config_app_latest.yaml
apiVersion: v1
kind: List
metadata: {}
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
    creationTimestamp: null
    labels:
      app: my-app-latest
    name: my-app-latest
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 9080
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      deploymentconfig: my-app-latest
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
    creationTimestamp: null
    generation: 1
    labels:
      app: my-app-latest
    name: my-app-latest
  spec:
    replicas: 1
    selector:
      app: my-app-latest
      deploymentconfig: my-app-latest
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
        creationTimestamp: null
        labels:
          app: my-app-latest
          deploymentconfig: my-app-latest
      spec:
        containers:
        - name: httpd
          image: httpd:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 9080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - name: jboss-eap
          image: jboss-eap:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - jboss-eap
        from:
          kind: ImageStreamTag
          name: jboss-eap:latest
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
    creationTimestamp: null
    labels:
      app: my-app-latest
    name: my-app-latest
  spec:
    host: null
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: my-app-latest
      weight: 100
    wildcardPolicy: None
